# extractbot

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: sample_email.txt  sample_meeting.txt  sample_no_task.txt  sample_slack.txt
src/: models.py
src/extractbot/: cli.py  extractor.py  models.py
tests/: test_cli.py  test_extractor.py  test_models.py
